Repository in function with foreacht
Repository is now in a function.
Data can be reached only from functions.

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,9 @@
   }
   
   .biggie {
+    font-size: 38px;
     color: var(--red);
+    font-style: italic;
   }
   
   @media all and (max-width: 500px) {
