--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,24 @@
     font-style: italic;
   }
   
+
+  .pokeButton-class {
+    background-color: wheat; /* Green */
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    color: rgb(18, 2, 2);
+    border: 4px solid #4caf50;
+  }
+
+  }
+
   @media all and (max-width: 500px) {
     .grid {
       grid-template-columns: 1fr;
