--- a/css/style.css
+++ b/css/style.css
@@ -2,99 +2,160 @@
 /*styles from first project just in case copied*/
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+:root {
+  --primary-color: #357b70;
+  --secondary-color: darkgoldenrod;
+  --red: red;
+  --dark-grey: darkgrey;
+  --button-green: green;
+  --base-color: white;
+  --nav-color: lightgray;
+  --svg-color0: khaki;
+  --svg-color1: yellow;
+  --svg-color2: darkorange;
+  --header-font-weight: 700;
+}
+
+main {
+  font-family: "Hubbali", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  /* Sets the font size to 16px */
+  line-height: 1.6;
+  /* Sets the line-height to 1.6 */
+}
+
+h1 {
+  text-decoration: underline;
+  font-size: 30px;
+  font-weight: var(--header-font-weight);
+}
+
+h2 {
+  font-size: 24px;
+  font-weight: var(--header-font-weight);
+}
+
+h3 {
+  font-size: 18px;
+  font-weight: var(--header-font-weight);
+}
+
+p {
+  font-style: italic;
+  font-size: 38px;
+  background-color: lightgray;
+}
+
+.biggie {
+  font-size: 38px;
+  color: var(--red);
+  font-style: italic;
+}
+
+
+.pokeButton-class {
+  background-color: wheat; /* Green */
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+  color: rgb(18, 2, 2);
+  border: 4px solid #4caf50;
+}
+
+
+/*1.8 task Modal*/
+#modal-container {
+position: fixed;
+padding: 20px;
+box-sizing: border-box;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.5);
+
+/* to show it above other content */
+z-index: 999; 
+
+/* to allow scrolling if the screen is not high enough*/
+overflow: auto; 
+
+/* this is used to center the modal */
+display: grid;
+text-align: center;
+}
+
+.modal {
+margin: auto;
+display: inline-block;
+box-sizing: border-box;
+background: #fff;
+padding: 15px;
+width: 100%;
+max-width: 700px;
+text-align: left;
+}
+
+.modal-close {
+float: right;
+-webkit-appearance: none;
+border: 0;
+background: none;
+color: #777;
+text-decoration: underline;
+}
+
+.modal h1 {
+margin-top: 0;
+}
+
+.modal p {
+margin-bottom: 50;
+}
+
+#modal-container {
+display: none;
+}
+
+#modal-container.is-visible {
+/* CSS for modal container - add your own desired CSS styles here */
+display: block;
+}
+
+ 
+
+
+
+@media all and (max-width: 500px) {
+  .grid {
+    grid-template-columns: 1fr;
   }
-  
-  :root {
-    --primary-color: #357b70;
-    --secondary-color: darkgoldenrod;
-    --red: red;
-    --dark-grey: darkgrey;
-    --button-green: green;
-    --base-color: white;
-    --nav-color: lightgray;
-    --svg-color0: khaki;
-    --svg-color1: yellow;
-    --svg-color2: darkorange;
-    --header-font-weight: 700;
+}
+
+@media all and (min-width: 500px) and (max-width: 750px) {
+  .grid {
+    grid-template-columns: 1fr 1fr;
   }
-  
-  main {
-    font-family: "Hubbali", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    /* Sets the font size to 16px */
-    line-height: 1.6;
-    /* Sets the line-height to 1.6 */
+}
+@media all and (max-width: 750px) {
+  .grid {
+    grid-gap: 10px;
   }
-  
+  .grid__item:last-child {
+    grid-column: auto / auto;
+    grid-row: auto / auto;
+  }
   h1 {
-    text-decoration: underline;
-    font-size: 30px;
-    font-weight: var(--header-font-weight);
+    font-size: 22px;
   }
-  
-  h2 {
-    font-size: 24px;
-    font-weight: var(--header-font-weight);
-  }
-  
-  h3 {
-    font-size: 18px;
-    font-weight: var(--header-font-weight);
-  }
-  
-  p {
-    font-style: italic;
-    font-size: 38px;
-    background-color: lightgray;
-  }
-  
-  .biggie {
-    font-size: 38px;
-    color: var(--red);
-    font-style: italic;
-  }
-  
-
-  .pokeButton-class {
-    background-color: wheat; /* Green */
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    cursor: pointer;
-    color: rgb(18, 2, 2);
-    border: 4px solid #4caf50;
-  }
-
-  }
-
-  @media all and (max-width: 500px) {
-    .grid {
-      grid-template-columns: 1fr;
-    }
-  }
-  
-  @media all and (min-width: 500px) and (max-width: 750px) {
-    .grid {
-      grid-template-columns: 1fr 1fr;
-    }
-  }
-  @media all and (max-width: 750px) {
-    .grid {
-      grid-gap: 10px;
-    }
-    .grid__item:last-child {
-      grid-column: auto / auto;
-      grid-row: auto / auto;
-    }
-    h1 {
-      font-size: 22px;
-    }
-  }
-  
+}
